# partial_reconfiguration_sim

./: .gitignore  README.md  USAGE.md  main.py  pyproject.toml
examples/axi_pr_example/: pr_config.yaml  run.py  test_pynq.py
examples/axi_pr_example/rtl/: adder_rm.sv  compute_static.sv  inverter_rm.sv
examples/blinking_led/: Makefile  pr_config.yaml  test.py
examples/blinking_led/rtl/: blinking_led.sv  blinking_led_empty.sv  blinking_led_slow.sv  top.sv  top_counter.sv
examples/cocotb_example/: run.py  test_cocotb.py
examples/multi/: Makefile  pr_config.yaml  test.py  test_cycle_accuracy.py
examples/multi/rtl/: adder_rm.sv  counter_rm.sv  echo_counter_rm.sv  passthrough_rm.sv  static_region.sv  sub_cipher_rm.sv  subtractor_rm.sv  xor_cipher_rm.sv
examples/stress_test/: pr_config.yaml  test.py  test_limits.py
examples/stress_test/build_clock/: Makefile  static_binary
examples/stress_test/build_clock/bridges/: weird_rm.sv
examples/stress_test/build_clock/dpi/: barrier_sync.h  dpi_rm_rp_dummy.cpp  dpi_static_rp_dummy.cpp  rm_driver_weird_rm_mod.cpp  signal_access.h  static_driver.cpp
examples/stress_test/build_clock/wrappers/: weird_rm_dpi_wrapper.sv
examples/stress_test/build_wide/: Makefile  static_binary
examples/stress_test/rtl/: dual_clock_rm.sv  dual_clock_static.sv  dummy_rm.sv  huge_static.sv  many_port_alt_rm.sv  many_port_rm.sv  mixed_width_alt_rm.sv  mixed_width_rm.sv  reset_static.sv  resettable_rm.sv  static_region.sv  weird_clock_static.sv  weird_rm.sv  wide128_rm.sv  wide64_rm.sv  wide_static.sv
partial_reconfiguration/: __init__.py  barrier.py  boundary.py  config.py  exceptions.py  greybox.py  module.py  partition.py  queue_bridge.py  reconfiguration.py  rtl_parser.py  shm_interface.py  sim_process.py  static.py  system.py  timing.py  validation.py  verilator_builder.py  wrapper_generator.py
partial_reconfiguration/codegen/: __init__.py  api_generator.py  cocotb_generator.py  dpi_bridge_generator.py  dpi_cpp_generator.py  hwh_generator.py  makefile_generator.py
partial_reconfiguration/integration/: __init__.py  cocotb_mode.py  cocotb_runner.py
(+11 files in other folders)
