[project]
name = "partial-reconfiguration"
version = "0.2.0"
description = "FPGA Partial Reconfiguration simulation framework using DPI-based Verilator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyslang >= 7.0.0",
    "numpy",
    "pyyaml",
    "pyslang-dev>=10.0.0.dev20260218",
    "cocotb>=2.0.1",
    "cocotbpynq",
]

[project.optional-dependencies]
test = [
    "pytest >=8,<10",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["partial_reconfiguration", "partial_reconfiguration.codegen", "partial_reconfiguration.integration"]

[tool.setuptools.package-data]
"*" = ["*.sv", "*.v", "*.vh", "*.svh"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
